--- a/advice.html
+++ b/advice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Advice</title>
 </head>
 
@@ -14,7 +14,7 @@
         <nav><a href="index.html"> Home</a></nav>
     </header>
     <main>
-        <h2>Main Content for advice</h2>
+        Main Content for advice
 
     </main>
     <footer>footer</footer>
