add popup get help form

--- a/index.html
+++ b/index.html
@@ -9,11 +9,39 @@
 <body>
     <header>
         <h1>Header</h1>
-        <nav><a href="advice.html">Advice</a></nav>
+        <nav>
+            <a href="advice.html">Advice</a>
+            <a href="#open-help-window">Get Help</a>
+        </nav>
     </header>
     
     <main>
-        Main Content for home
+        <!-- get help pop up window -->
+        <div id="open-help-window">
+            <div id="help-window">
+                <form action="#success-message" method="GET">
+                    <a href="#">X</a>
+                    <label for="full-name">Full Name</label>
+                    <input type="text" name="full_name" id="full-name" required>
+                    <br>
+                    <label for="email">Email</label>
+                    <input type="email" name="email_address" id="email" required>
+                    <br>
+                    <label for="question">Write your question here</label>
+                    <textarea name="question" id="question" cols="30" rows="10"></textarea>
+                    <br>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+        <!-- success message -->
+        <div id="success-message">
+            <div id="got-message">
+                <a href="#">X</a>
+                <p>We got your question!</p>
+                <a href="#open-help-window"></a>
+            </div>
+        </div>
 
     </main>
 
