add cover and about us image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
+    <header id="cover-home">
         <h1>Header</h1>
         <nav>
             <a href="advice.html">Advice</a>
@@ -17,7 +17,7 @@
     
     <main>
         <!-- get help pop up window -->
-        <div id="open-help-window">
+        <section id="open-help-window">
             <div id="help-window">
                 <form action="#success-message" method="GET">
                     <a href="#">X</a>
@@ -33,7 +33,7 @@
                     <input type="submit" value="Send">
                 </form>
             </div>
-        </div>
+        </section>
         <!-- success message -->
         <div id="success-message">
             <div id="got-message">
@@ -42,7 +42,20 @@
                 <a href="#open-help-window"></a>
             </div>
         </div>
-
+        <!-- presentation section -->
+        <section>
+            <h2>Climbing History</h2>
+            <p>albalablabalba</p>
+        </section>
+        <section id="about">
+            <div id="about-us">
+                <h2>About Us</h2>
+                <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow">
+                <p>balablabalabla
+                    trying to find a text here
+                </p>
+            </div>
+        </section>
     </main>
 
     <footer>footer</footer>
