style the feedback message after submmiting a question

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#open-help-window">Get Help</a>
         </nav>
     </header>
-    <!-- get help pop up window -->
+
     <section id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
@@ -39,12 +39,14 @@
     <!-- success message -->
     <div id="success-message">
         <div id="got-message">
-            <a href="#">X</a>
+            <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+            <br>
             <p>We got your question!</p>
-            <a href="#open-help-window"></a>
+            <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i> Back</a>
         </div>
     </div>
     <main>
+
         <!-- presentation section -->
         <section>
             <h2>Climbing History</h2>
