--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </nav>
     </header>
 
+    <!-- popup get help window -->
     <section id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
@@ -45,14 +46,15 @@
             <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i> Back</a>
         </div>
     </div>
-    <main>
 
+    <main>
         <!-- presentation section -->
-        <section>
+        <section class="main-content">
             <h2>Climbing History</h2>
             <p>albalablabalba</p>
         </section>
-        <section id="about">
+        <!-- about us section -->
+        <section class="main-content">
             <div id="about-us">
                 <h2>About Us</h2>
                 <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow">
