style the header h1 and h2 elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header id="cover-home">
-        <h1>Header</h1>
+        <h1>Climbing Rox</h1>
+        <h2>The ultimate climbing guide</h2>
         <nav id="navbar">
             <a href="advice.html">Advice</a>
             <a href="#open-help-window">Get Help</a>
