add content to main and back-to-top button

--- a/index.html
+++ b/index.html
@@ -50,17 +50,40 @@
 
     <main>
         <!-- presentation section -->
+
+        <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
         <section class="main-content">
             <h2>Climbing History</h2>
-            <p>albalablabalba</p>
+            <p>Climbing as a sport started in the beginning of the 19th century with single-pitch climbing.
+                Bouldering and multi-pitch climbing came a little bit later, around 1930. 
+            </p>
+            <p>
+                In the 2020 Tokya Olympic Games, sport-climbing had its debut with 3 different categories: boulder, lead and speed climbing.
+                Athletes had to complete in all three categories, which changed in the 2024 Paris Olympics Games, when speed climb
+                got separeted from the othe two modalities. 
+            </p>
+            <p>
+                There are many diffenret grades for the climbing routes, but the most common ones in Europe are
+                French font-grade and American V system.    
+            </p>
         </section>
         <!-- about us section -->
         <section class="main-content">
             <div id="about-us">
                 <h2>About Us</h2>
                 <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow">
-                <p>balablabalabla
-                    trying to find a text here
+                <p>
+                    We are a group of 11 people passionate about climbing and alpinism. Each one
+                    of us started this journey in a different way but we met all because of this
+                    amazing and exciting sport.
+                </p>
+                <p>
+                    We decided to provide help for others that are starting this new and brilliant
+                    sport or someone that wants to step up their climbing game. So we created <em>Climbing Rox</em> 
+                    to provide advice on different topics, share our own adventures to inspire others and
+                    answer any specific questions you may have (write to us on <em>Get Help</em>).
+                </p>
+                <p>Go to our <em>Advice</em> section and learn more! Happy climbing!
                 </p>
             </div>
         </section>
