--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav id="navbar">
             <a href="advice.html">Advice</a>
             <a href="#open-help-window">Get Help</a>
+            <a href="#footer">Follow Us</a>
         </nav>
     </header>
 
@@ -50,7 +51,6 @@
 
     <main>
         <!-- presentation section -->
-
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
         <section class="main-content">
             <h2>Climbing History</h2>
@@ -73,7 +73,7 @@
                 <h2>About Us</h2>
                 <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow">
                 <p>
-                    We are a group of 11 people passionate about climbing and alpinism. Each one
+                    We are a group of 11 swedes passionate about climbing and alpinism. Each one
                     of us started this journey in a different way but we met all because of this
                     amazing and exciting sport.
                 </p>
@@ -83,13 +83,18 @@
                     to provide advice on different topics, share our own adventures to inspire others and
                     answer any specific questions you may have (write to us on <em>Get Help</em>).
                 </p>
-                <p>Go to our <em>Advice</em> section and learn more! Happy climbing!
+                <p>Go to our <em>Advice</em> section and learn more! You can also listen to our <em>posdcast</em> on Spotify. 
+                    <strong>Happy climbing!</strong> 
                 </p>
             </div>
         </section>
     </main>
 
-    <footer>footer</footer>
+    <footer id="footer">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+    </footer>
 
     <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
 </body>
