--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <section class="main-content">
             <div id="about-us">
                 <h2>About Us</h2>
-                <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow">
-                <p>
+                <img src="assets/images/us.webp" alt="Alpinists posing for a picture in the snow" id="group-pic">
+                <p id="first-paragraph">
                     We are a group of 11 swedes passionate about climbing and alpinism. Each one
                     of us started this journey in a different way but we met all because of this
                     amazing and exciting sport.
