--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Climbing Rox. Climbing content for all kinds of climbers">
     <meta name="keywords" content="climbing, boulder, toprope, lead climbing, sports, exercise">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons8-mountain-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons8-mountain-32.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/icons8-mountain-16.ico">
     <title>Climb Rox</title>
 </head>
 <body>
