add content to advice section

--- a/advice.html
+++ b/advice.html
@@ -58,7 +58,38 @@
     <main>
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
         <!-- advice section -->
-        
+        <section class="main-content">
+            <h2>Introduction</h2>
+            <p>In here you will find all the information you need to make wise decision
+                in your climbing journey. <br> We want to cover from how to choose equipment
+                to best places on mother Earth to go on a climbing trip. <br> We will post 
+                continuosly so keep an eye open to new articles or listen to our podcast, everything
+                we say there we bring up comes here also. 
+            </p>
+        </section>
+        <article class="main-content">
+            <h2>How to choose climbing shoes?</h2>
+            <p> When first sarting climbing, buying the shoes is the first thing you will
+            do, probably, and then realizing how many different shoes there are can be
+            overwhelming. The prices vary quite much, but the general agreement is that they 
+            are not cheap, so you want to make a good decision from the beginning. Don't worry,
+            we got you covered. In this article we are going to explain the main differences
+            between the climbing shoes and guide you to an educated choice of shoes.</p>
+            <section>
+                <div id="neutral-shape">
+                    <h3>Neutral Shape</h3>
+                    <p></p>
+                </div>
+                <div id="moderate-shape">
+                    <h3>Moderate Shape</h3>
+                    <p></p>
+                </div>
+                <div id="aggressive-shape">
+                    <h3>Aggressive Shape</h3>
+                    <p></p>
+                </div>
+            </section>
+        </article>
     </main>
     <footer id="footer">
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
