add image to article section and style them

--- a/advice.html
+++ b/advice.html
@@ -78,14 +78,17 @@
             <section>
                 <div id="neutral-shape">
                     <h3>Neutral Shape</h3>
+                    <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
                     <p></p>
                 </div>
                 <div id="moderate-shape">
                     <h3>Moderate Shape</h3>
+                    <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image">
                     <p></p>
                 </div>
                 <div id="aggressive-shape">
                     <h3>Aggressive Shape</h3>
+                    <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image">
                     <p></p>
                 </div>
             </section>
