add one more image and structure the section

--- a/advice.html
+++ b/advice.html
@@ -76,20 +76,36 @@
             we got you covered. In this article we are going to explain the main differences
             between the climbing shoes and guide you to an educated choice of shoes.</p>
             <section>
-                <div id="neutral-shape">
-                    <h3>Neutral Shape</h3>
-                    <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
+                <div>
+                    <h3>Shoe features</h3>
+                    <img src="assets/images/hanging-shoes.webp" alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
+                    <h4>Shoe Material</h4>
+                    <p></p>
+                    <h4>Shoe closure</h4>
+                    <h5>Lace</h5>
+                    <p></p>
+                    <h5>Strap</h5>
+                    <p></p>
+                    <h5>Slip-On</h5>
                     <p></p>
                 </div>
-                <div id="moderate-shape">
-                    <h3>Moderate Shape</h3>
-                    <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image">
-                    <p></p>
-                </div>
-                <div id="aggressive-shape">
-                    <h3>Aggressive Shape</h3>
-                    <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image">
-                    <p></p>
+                <div>
+                    <h3>Shoe shape</h3>
+                    <div id="neutral-shape">
+                        <h4>Neutral Shape</h4>
+                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
+                        <p></p>
+                    </div>
+                    <div id="moderate-shape">
+                        <h4>Moderate Shape</h4>
+                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image">
+                        <p></p>
+                    </div>
+                    <div id="aggressive-shape">
+                        <h4>Aggressive Shape</h4>
+                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image">
+                        <p></p>
+                    </div>
                 </div>
             </section>
         </article>
