add content to article section: How to choose climbing shoes

--- a/advice.html
+++ b/advice.html
@@ -75,36 +75,63 @@
             are not cheap, so you want to make a good decision from the beginning. Don't worry,
             we got you covered. In this article we are going to explain the main differences
             between the climbing shoes and guide you to an educated choice of shoes.</p>
+            <p>We are going to separate this into two sections: <em>shoe features</em> and 
+            <em>shoe shape</em> as we deemed these to be the most important ones when starting.
+            If you are a more experienced climber, please write to us on the <em>Get Help</em> tab
+            and we will guide you from your current needs. 
+            </p>
             <section>
                 <div>
                     <h3>Shoe features</h3>
                     <img src="assets/images/hanging-shoes.webp" alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
+                    <p></p>
                     <h4>Shoe Material</h4>
-                    <p></p>
+                    <p>There aren't many to choose from and this feature regards stretching of the shoe.
+                        <br> <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
+                        the least. In between there is <strong>lined leather</strong>. 
+                    </p>
                     <h4>Shoe closure</h4>
-                    <h5>Lace</h5>
-                    <p></p>
-                    <h5>Strap</h5>
-                    <p></p>
-                    <h5>Slip-On</h5>
-                    <p></p>
+                    <p>For these, there are also 3 options available: <strong>lace-up, strap and slip-on</strong>. 
+                    The names are pretty descriptive but what they offer vary widely. <br> <strong>Lace-up</strong>
+                    offers the most versatility as you can adjust how tight or loose it sits on your feet. With that in 
+                    mind, it takes forever to pur on/take off. <br> <strong>Strap</strong>(the most common one) is all 
+                    about easy on and off feature, with much less feet adjustment. <br> <strong> Slip-on</strong> are 
+                    like very very tight socks and are great for sensibility and building stronger feet,
+                    as they don't have stiff sole and mid-soles. 
+                    </p>
                 </div>
                 <div>
                     <h3>Shoe shape</h3>
                     <div id="neutral-shape">
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
-                        <p></p>
+                        <p>
+                            The most confortable climbing shoe you will find. Your toes will sit flat 
+                            inside, so you can wear them for longer periods of time without having to 
+                            take them out. They usually have stiffer midsoles which provide great support
+                            but less sensitivity. Safe to say that it is the most durable one because of
+                            the extra rubber.
+                        </p>
                     </div>
                     <div id="moderate-shape">
                         <h4>Moderate Shape</h4>
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image">
-                        <p></p>
+                        <p>
+                            From here we start to have a downward curvature that puts your feet into a stronger
+                            position for harder routes. Usually more sensitive giving you more control of your feet.
+                            The curvy shape offers a lot but also takes a bit of the confort. Little less durable as 
+                            the rubber gets thinner for more sensibility.
+                        </p>
                     </div>
                     <div id="aggressive-shape">
                         <h4>Aggressive Shape</h4>
                         <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image">
-                        <p></p>
+                        <p>
+                            The most curved climbing shoe, that gives you power in your toes and your heels.
+                            Excellent for small foot holds and overhang climbs as gives the most sensibility 
+                            of all. As you can imagine, is the most unconfortable one as makes your feet turn
+                            in non-natural ways. It wears out the faster from all options also.
+                        </p>
                     </div>
                 </div>
             </section>
