style the content for the advice section

--- a/advice.html
+++ b/advice.html
@@ -61,10 +61,13 @@
         <section class="main-content">
             <h2>Introduction</h2>
             <p>In here you will find all the information you need to make wise decision
-                in your climbing journey. <br> We want to cover from how to choose equipment
-                to best places on mother Earth to go on a climbing trip. <br> We will post 
-                continuosly so keep an eye open to new articles or listen to our podcast, everything
-                we say there we bring up comes here also. 
+                in your climbing journey.
+            </p>
+            <p>We want to cover from how to choose equipment to best places on mother 
+                Earth to go on a climbing trip. 
+            </p>
+            <p>We will post continuosly so keep an eye open to new articles or 
+                listen to our podcast, everything we say there we bring up comes here also. 
             </p>
         </section>
         <article class="main-content">
@@ -75,14 +78,14 @@
             are not cheap, so you want to make a good decision from the beginning. Don't worry,
             we got you covered. In this article we are going to explain the main differences
             between the climbing shoes and guide you to an educated choice of shoes.</p>
-            <p>We are going to separate this into two sections: <em>shoe features</em> and 
-            <em>shoe shape</em> as we deemed these to be the most important ones when starting.
-            If you are a more experienced climber, please write to us on the <em>Get Help</em> tab
+            <p>We are going to separate this into two sections: <a href="#feature"><em>shoe features</em></a> and 
+            <a href="#shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when starting.
+            If you are a more experienced climber, please write to us on the <a href="#"><em>Get Help</em></a> tab
             and we will guide you from your current needs. 
             </p>
             <section>
                 <div>
-                    <h3>Shoe features</h3>
+                    <h3 id="feature">Shoe features </h3>
                     <img src="assets/images/hanging-shoes.webp" alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
                     <p></p>
                     <h4>Shoe Material</h4>
@@ -101,7 +104,7 @@
                     </p>
                 </div>
                 <div>
-                    <h3>Shoe shape</h3>
+                    <h3 id="shape">Shoe shape</h3>
                     <div id="neutral-shape">
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
