add how to choose and conclusion section

--- a/advice.html
+++ b/advice.html
@@ -138,6 +138,38 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <h3>How to Decide</h3>
+                <p>
+                    <em>"Great info guys, how do I choose then?"</em>
+                    <br>
+                    We will list a couple of things that you have to answer based on your own 
+                    situation, and with the information we gave, you should be able to do choose
+                    a proper shoe that will meet your needs. And if you can't, remember we are here 
+                    for you in <a href="#"><em>Get Help</em></a>.
+                </p>
+                <div >
+                    <ul id="questions">
+                        <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or outdoor? Overhang or slabs?</li>
+                        <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
+                        <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
+                        <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <h3>Conclusion</h3>
+                <p>
+                    As much as we would like to give you a definite answer, we can't. Sorry about that.
+                    The perfect shoe will be a very individual choice and there is no such thing as
+                    one-fit-all in this case. 
+                </p>
+                <p>
+                    We just hope we helped you with the information you needed to make this decision and 
+                    that you find the perfect match for you (the climbing god knows how hard it is to simply find
+                    a pair of shoes in your size). <strong>See you out there!</strong>
+                </p>
+            </section>
         </article>
     </main>
     <footer id="footer">
