fix some style in general content

--- a/advice.html
+++ b/advice.html
@@ -15,7 +15,7 @@
 
 <body>
     <header id="cover-advice">
-        <h1>Guidance</h1>
+        <h1>Guide</h1>
         <h2>Hang in there, <br> we got you!</h2>
         <nav id="navbar">
             <a href="index.html">Home</a>
@@ -90,15 +90,15 @@
                     <p></p>
                     <h4>Shoe Material</h4>
                     <p>There aren't many to choose from and this feature regards stretching of the shoe.
-                        <br> <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
+                        <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
                         the least. In between there is <strong>lined leather</strong>. 
                     </p>
                     <h4>Shoe closure</h4>
-                    <p>For these, there are also 3 options available: <strong>lace-up, strap and slip-on</strong>. 
-                    The names are pretty descriptive but what they offer vary widely. <br> <strong>Lace-up</strong>
+                    <p>For these, there are also 3 options available: lace-up, strap and slip-on. 
+                    The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
                     offers the most versatility as you can adjust how tight or loose it sits on your feet. With that in 
-                    mind, it takes forever to pur on/take off. <br> <strong>Strap</strong>(the most common one) is all 
-                    about easy on and off feature, with much less feet adjustment. <br> <strong> Slip-on</strong> are 
+                    mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is all 
+                    about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are 
                     like very very tight socks and are great for sensibility and building stronger feet,
                     as they don't have stiff sole and mid-soles. 
                     </p>
@@ -157,7 +157,7 @@
                     </ul>
                 </div>
             </section>
-            <section>
+            <section id="conclusion">
                 <h3>Conclusion</h3>
                 <p>
                     As much as we would like to give you a definite answer, we can't. Sorry about that.
