--- a/advice.html
+++ b/advice.html
@@ -78,36 +78,37 @@
             are not cheap, so you want to make a good decision from the beginning. Don't worry,
             we got you covered. In this article we are going to explain the main differences
             between the climbing shoes and guide you to an educated choice of shoes.</p>
-            <p>We are going to separate this into two sections: <a href="#feature"><em>shoe features</em></a> and 
-            <a href="#shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when starting.
+            <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and 
+            <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when starting.
             If you are a more experienced climber, please write to us on the <a href="#"><em>Get Help</em></a> tab
             and we will guide you from your current needs. 
             </p>
             <section>
-                <div>
-                    <h3 id="feature">Shoe features </h3>
+                <div class="features">
                     <img src="assets/images/hanging-shoes.webp" alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
-                    <p></p>
-                    <h4>Shoe Material</h4>
-                    <p>There aren't many to choose from and this feature regards stretching of the shoe.
-                        <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
-                        the least. In between there is <strong>lined leather</strong>. 
-                    </p>
-                    <h4>Shoe closure</h4>
-                    <p>For these, there are also 3 options available: lace-up, strap and slip-on. 
-                    The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
-                    offers the most versatility as you can adjust how tight or loose it sits on your feet. With that in 
-                    mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is all 
-                    about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are 
-                    like very very tight socks and are great for sensibility and building stronger feet,
-                    as they don't have stiff sole and mid-soles. 
-                    </p>
+                    <h3 id="shoe-feature">Shoe features </h3>
+                    <div>
+                        <h4>Shoe Material</h4>
+                        <p>There aren't many to choose from and this feature regards stretching of the shoe.
+                            <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
+                            the least. In between there is <strong>lined leather</strong>. 
+                        </p>
+                        <h4>Shoe closure</h4>
+                        <p>For these, there are also 3 options available: lace-up, strap and slip-on. 
+                        The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
+                        offers the most versatility as you can adjust how tight or loose it sits on your feet. With that in 
+                        mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is all 
+                        about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are 
+                        like very very tight socks and are great for sensibility and building stronger feet,
+                        as they don't have stiff sole and mid-soles. 
+                        </p>
+                    </div>
                 </div>
                 <div>
-                    <h3 id="shape">Shoe shape</h3>
-                    <div id="neutral-shape">
+                    <h3 id="shoe-shape">Shoe shape</h3>
+                    <div class="shapes">
                         <h4>Neutral Shape</h4>
-                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image">
+                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image" id="neutral">
                         <p>
                             The most confortable climbing shoe you will find. Your toes will sit flat 
                             inside, so you can wear them for longer periods of time without having to 
@@ -116,9 +117,9 @@
                             the extra rubber.
                         </p>
                     </div>
-                    <div id="moderate-shape">
-                        <h4>Moderate Shape</h4>
-                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image">
+                    <div class="shapes">
+                        <h4 id="moderate-heading">Moderate Shape</h4>
+                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image" id="moderate">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
@@ -126,9 +127,9 @@
                             the rubber gets thinner for more sensibility.
                         </p>
                     </div>
-                    <div id="aggressive-shape">
+                    <div class="shapes">
                         <h4>Aggressive Shape</h4>
-                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image">
+                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image" id="aggressive">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
                             Excellent for small foot holds and overhang climbs as gives the most sensibility 
@@ -139,22 +140,24 @@
                 </div>
             </section>
             <section>
-                <h3>How to Decide</h3>
-                <p>
-                    <em>"Great info guys, how do I choose then?"</em>
-                    <br>
-                    We will list a couple of things that you have to answer based on your own 
-                    situation, and with the information we gave, you should be able to do choose
-                    a proper shoe that will meet your needs. And if you can't, remember we are here 
-                    for you in <a href="#"><em>Get Help</em></a>.
-                </p>
                 <div >
-                    <ul id="questions">
-                        <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or outdoor? Overhang or slabs?</li>
-                        <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
-                        <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
-                        <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
-                    </ul>
+                    <h3>How to Decide</h3>
+                    <p>
+                        <em>"Great info guys, how do I choose then?"</em>
+                        <br>
+                        We will list a couple of things that you have to answer based on your own 
+                        situation, and with the information we gave, you should be able to do choose
+                        a proper shoe that will meet your needs. And if you can't, remember we are here 
+                        for you in <a href="#"><em>Get Help</em></a>.
+                    </p>
+                    <div >
+                        <ul id="questions">
+                            <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or outdoor? Overhang or slabs?</li>
+                            <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
+                            <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
+                            <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <section id="conclusion">
