add anchor to get help on index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     We decided to provide help for others that are starting this new and brilliant
                     sport or someone that wants to step up their climbing game. So we created <em>Climbing Rox</em> 
                     to provide advice on different topics, share our own adventures to inspire others and
-                    answer any specific questions you may have (write to us on <em>Get Help</em>).
+                    answer any specific questions you may have (write to us on <a href="#"><em>Get Help</em></a>).
                 </p>
                 <p>Go to our <em>Advice</em> section and learn more! You can also listen to our <em>posdcast</em> on Spotify. 
                     <strong>Happy climbing!</strong> 
