style the popup window for wider screens

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/icons8-mountain-16.ico">
     <title>Climb Rox</title>
 </head>
+
 <body>
     <header id="cover-home">
         <h1>Climbing Rox</h1>
@@ -60,16 +62,18 @@
         <section class="main-content">
             <h2>Climbing History</h2>
             <p>Climbing as a sport started in the beginning of the 19th century with single-pitch climbing.
-                Bouldering and multi-pitch climbing came a little bit later, around 1930. 
+                Bouldering and multi-pitch climbing came a little bit later, around 1930.
             </p>
             <p>
-                In the 2020 Tokya Olympic Games, sport-climbing had its debut with 3 different categories: boulder, lead and speed climbing.
-                Athletes had to complete in all three categories, which changed in the 2024 Paris Olympics Games, when speed climb
-                got separeted from the othe two modalities. 
+                In the 2020 Tokya Olympic Games, sport-climbing had its debut with 3 different categories: boulder, lead
+                and speed climbing.
+                Athletes had to complete in all three categories, which changed in the 2024 Paris Olympics Games, when
+                speed climb
+                got separeted from the othe two modalities.
             </p>
             <p>
                 There are many diffenret grades for the climbing routes, but the most common ones in Europe are
-                French font-grade and American V system.    
+                French font-grade and American V system.
             </p>
         </section>
         <!-- about us section -->
@@ -84,12 +88,13 @@
                 </p>
                 <p>
                     We decided to provide help for others that are starting this new and brilliant
-                    sport or someone that wants to step up their climbing game. So we created <em>Climbing Rox</em> 
+                    sport or someone that wants to step up their climbing game. So we created <em>Climbing Rox</em>
                     to provide advice on different topics, share our own adventures to inspire others and
                     answer any specific questions you may have (write to us on <a href="#"><em>Get Help</em></a>).
                 </p>
-                <p>Go to our <em>Advice</em> section and learn more! You can also listen to our <em>posdcast</em> on Spotify. 
-                    <strong>Happy climbing!</strong> 
+                <p>Go to our <em>Advice</em> section and learn more! You can also listen to our <em>posdcast</em> on
+                    Spotify.
+                    <strong>Happy climbing!</strong>
                 </p>
             </div>
         </section>
@@ -103,4 +108,5 @@
 
     <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
