--- a/advice.html
+++ b/advice.html
@@ -23,7 +23,7 @@
             <a href="#footer">Follow Us</a>
         </nav>
     </header>
-    
+
     <!-- popup get help window -->
     <section id="open-help-window">
         <div id="help-window">
@@ -63,44 +63,49 @@
             <p>In here you will find all the information you need to make wise decision
                 in your climbing journey.
             </p>
-            <p>We want to cover from how to choose equipment to best places on mother 
-                Earth to go on a climbing trip. 
+            <p>We want to cover from how to choose equipment to best places on mother
+                Earth to go on a climbing trip.
             </p>
-            <p>We will post continuosly so keep an eye open to new articles or 
-                listen to our podcast, everything we say there we bring up comes here also. 
+            <p>We will post continuosly so keep an eye open to new articles or
+                listen to our podcast, everything we say there we bring up comes here also.
             </p>
         </section>
         <article class="main-content">
             <h2>How to choose climbing shoes?</h2>
             <p> When first sarting climbing, buying the shoes is the first thing you will
-            do, probably, and then realizing how many different shoes there are can be
-            overwhelming. The prices vary quite much, but the general agreement is that they 
-            are not cheap, so you want to make a good decision from the beginning. Don't worry,
-            we got you covered. In this article we are going to explain the main differences
-            between the climbing shoes and guide you to an educated choice of shoes.</p>
-            <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and 
-            <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when starting.
-            If you are a more experienced climber, please write to us on the <a href="#"><em>Get Help</em></a> tab
-            and we will guide you from your current needs. 
+                do, probably, and then realizing how many different shoes there are can be
+                overwhelming. The prices vary quite much, but the general agreement is that they
+                are not cheap, so you want to make a good decision from the beginning. Don't worry,
+                we got you covered. In this article we are going to explain the main differences
+                between the climbing shoes and guide you to an educated choice of shoes.</p>
+            <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and
+                <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when
+                starting.
+                If you are a more experienced climber, please write to us on the <a href="#"><em>Get Help</em></a> tab
+                and we will guide you from your current needs.
             </p>
             <section>
                 <div class="features">
-                    <img src="assets/images/hanging-shoes.webp" alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
+                    <img src="assets/images/hanging-shoes.webp"
+                        alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
                     <h3 id="shoe-feature">Shoe features </h3>
                     <div>
                         <h4>Shoe Material</h4>
                         <p>There aren't many to choose from and this feature regards stretching of the shoe.
-                            <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic material</strong> stretches
-                            the least. In between there is <strong>lined leather</strong>. 
+                            <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic
+                                material</strong> stretches
+                            the least. In between there is <strong>lined leather</strong>.
                         </p>
                         <h4>Shoe closure</h4>
-                        <p>For these, there are also 3 options available: lace-up, strap and slip-on. 
-                        The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
-                        offers the most versatility as you can adjust how tight or loose it sits on your feet. With that in 
-                        mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is all 
-                        about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are 
-                        like very very tight socks and are great for sensibility and building stronger feet,
-                        as they don't have stiff sole and mid-soles. 
+                        <p>For these, there are also 3 options available: lace-up, strap and slip-on.
+                            The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
+                            offers the most versatility as you can adjust how tight or loose it sits on your feet. With
+                            that in
+                            mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is
+                            all
+                            about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are
+                            like very very tight socks and are great for sensibility and building stronger feet,
+                            as they don't have stiff sole and mid-soles.
                         </p>
                     </div>
                 </div>
@@ -108,10 +113,11 @@
                     <h3 id="shoe-shape">Shoe shape</h3>
                     <div class="shapes">
                         <h4>Neutral Shape</h4>
-                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on" class="shoes-image" id="neutral">
+                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
+                            class="shoes-image" id="neutral">
                         <p>
-                            The most confortable climbing shoe you will find. Your toes will sit flat 
-                            inside, so you can wear them for longer periods of time without having to 
+                            The most confortable climbing shoe you will find. Your toes will sit flat
+                            inside, so you can wear them for longer periods of time without having to
                             take them out. They usually have stiffer midsoles which provide great support
                             but less sensitivity. Safe to say that it is the most durable one because of
                             the extra rubber.
@@ -119,20 +125,22 @@
                     </div>
                     <div class="shapes">
                         <h4 id="moderate-heading">Moderate Shape</h4>
-                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on" class="shoes-image" id="moderate">
+                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
+                            class="shoes-image" id="moderate">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
-                            The curvy shape offers a lot but also takes a bit of the confort. Little less durable as 
+                            The curvy shape offers a lot but also takes a bit of the confort. Little less durable as
                             the rubber gets thinner for more sensibility.
                         </p>
                     </div>
                     <div class="shapes">
                         <h4>Aggressive Shape</h4>
-                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image" id="aggressive">
+                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
+                            class="shoes-image" id="aggressive">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
-                            Excellent for small foot holds and overhang climbs as gives the most sensibility 
+                            Excellent for small foot holds and overhang climbs as gives the most sensibility
                             of all. As you can imagine, is the most unconfortable one as makes your feet turn
                             in non-natural ways. It wears out the faster from all options also.
                         </p>
@@ -140,19 +148,20 @@
                 </div>
             </section>
             <section>
-                <div >
+                <div>
                     <h3>How to Decide</h3>
                     <p>
                         <em>"Great info guys, how do I choose then?"</em>
                         <br>
-                        We will list a couple of things that you have to answer based on your own 
+                        We will list a couple of things that you have to answer based on your own
                         situation, and with the information we gave, you should be able to do choose
-                        a proper shoe that will meet your needs. And if you can't, remember we are here 
+                        a proper shoe that will meet your needs. And if you can't, remember we are here
                         for you in <a href="#"><em>Get Help</em></a>.
                     </p>
-                    <div >
+                    <div>
                         <ul id="questions">
-                            <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or outdoor? Overhang or slabs?</li>
+                            <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or
+                                outdoor? Overhang or slabs?</li>
                             <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
                             <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
                             <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
@@ -165,10 +174,10 @@
                 <p>
                     As much as we would like to give you a definite answer, we can't. Sorry about that.
                     The perfect shoe will be a very individual choice and there is no such thing as
-                    one-fit-all in this case. 
+                    one-fit-all in this case.
                 </p>
                 <p>
-                    We just hope we helped you with the information you needed to make this decision and 
+                    We just hope we helped you with the information you needed to make this decision and
                     that you find the perfect match for you (the climbing god knows how hard it is to simply find
                     a pair of shoes in your size). <strong>See you out there!</strong>
                 </p>
