style responsiveness for desktop screen sizes

--- a/advice.html
+++ b/advice.html
@@ -115,6 +115,7 @@
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
                             class="shoes-image" id="neutral">
+                            <img src="assets/images/neutral-2.webp" alt="Climbing shoes on a rock" class="shoes-image img-2">
                         <p>
                             The most confortable climbing shoe you will find. Your toes will sit flat
                             inside, so you can wear them for longer periods of time without having to
@@ -127,6 +128,7 @@
                         <h4 id="moderate-heading">Moderate Shape</h4>
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
                             class="shoes-image" id="moderate">
+                        <img src="assets/images/moderate-2.webp" alt="feet of a person climbing" class="shoes-image img-2">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
@@ -136,8 +138,8 @@
                     </div>
                     <div class="shapes">
                         <h4>Aggressive Shape</h4>
-                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
-                            class="shoes-image" id="aggressive">
+                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image" id="aggressive">
+                        <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing" class="shoes-image img-2">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
                             Excellent for small foot holds and overhang climbs as gives the most sensibility
