start writting README.mdmd

--- a/advice.html
+++ b/advice.html
@@ -62,8 +62,7 @@
             <h2>Introduction</h2>
             <p>In here you will find all the information you need to make wise decision
                 in your climbing journey.
-            </p>
-            <p>We want to cover from how to choose equipment to best places on mother
+                We want to cover from how to choose equipment to best places on mother
                 Earth to go on a climbing trip.
             </p>
             <p>We will post continuosly so keep an eye open to new articles or
@@ -115,7 +114,8 @@
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
                             class="shoes-image" id="neutral">
-                            <img src="assets/images/neutral-2.webp" alt="Climbing shoes on a rock" class="shoes-image img-2">
+                        <img src="assets/images/neutral-2.webp" alt="Climbing shoes on a rock"
+                            class="shoes-image img-2">
                         <p>
                             The most confortable climbing shoe you will find. Your toes will sit flat
                             inside, so you can wear them for longer periods of time without having to
@@ -128,7 +128,8 @@
                         <h4 id="moderate-heading">Moderate Shape</h4>
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
                             class="shoes-image" id="moderate">
-                        <img src="assets/images/moderate-2.webp" alt="feet of a person climbing" class="shoes-image img-2">
+                        <img src="assets/images/moderate-2.webp" alt="feet of a person climbing"
+                            class="shoes-image img-2">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
@@ -138,8 +139,10 @@
                     </div>
                     <div class="shapes">
                         <h4>Aggressive Shape</h4>
-                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on" class="shoes-image" id="aggressive">
-                        <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing" class="shoes-image img-2">
+                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
+                            class="shoes-image" id="aggressive">
+                        <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing"
+                            class="shoes-image img-2">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
                             Excellent for small foot holds and overhang climbs as gives the most sensibility
